c/examples/writing-a-c-compiler-tests/tests/chapter_15/invalid_parse/parenthesized_array_of_functions.c
// Basically the same test case as array_of_functions.c
// In other implementations this might be a type error, not a parse error
int(foo[3])(int a);